--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "biome lint -- apply src/",
-    "format": "biome format src/ --write",
-    "check": "biome check --apply src/"
+    "lint": "biome lint --write ./src",
+    "format": "biome format --write ./src",
+    "check": "biome check --write ./src"
   },
   "dependencies": {
     "next": "15.1.0",
