--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,7 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  // NOTE: The compiler option "forceConsistentCasingInFileNames" should be enabled to reduce issues when working with different OSes.
+  "forceConsistentCasingInFileNames": true
 }
