--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    // NOTE: The compiler option "forceConsistentCasingInFileNames" should be enabled to reduce issues when working with different OSes.
+    "forceConsistentCasingInFileNames": true,
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
@@ -23,7 +25,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"],
-  // NOTE: The compiler option "forceConsistentCasingInFileNames" should be enabled to reduce issues when working with different OSes.
-  "forceConsistentCasingInFileNames": true
+  "exclude": ["node_modules"]
 }
