--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "editor.codeActionsOnSave": {
         "quickfix.biome": "always",
-        "source.organizeImports.biome": "always"
+        "source.organizeImports.biome": "explicit"
     },
     "editor.defaultFormatter": "biomejs.biome",
+    "editor.formatOnSave": true,
 }
