--- a/biome.json
+++ b/biome.json
@@ -47,6 +47,16 @@
           }
         }
       }
+    },
+    {
+      "include": ["articles/[slug]/page.tsx"],
+      "linter": {
+        "rules": {
+          "security": {
+            "noDangerouslySetInnerHtml": "off"
+          }
+        }
+      }
     }
   ]
 }
